--- a/Java-master/epam-deik-java-dev-main/epam-deik-java-dev-main/final/ticket-service/src/main/resources/application.properties
+++ b/Java-master/epam-deik-java-dev-main/epam-deik-java-dev-main/final/ticket-service/src/main/resources/application.properties
@@ -10,7 +10,6 @@ ATTACH_MORE = true
 
 
 spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.url=jdbc:mysql://localhost:3306/final
-spring.datasource.url=jdbc:h2:mem:final
+spring.datasource.url=jdbc:mysql://localhost:3306/final
 spring.datasource.username=root
 spring.datasource.password=asdQWE123
